# perceptron

./: CMakeLists.txt  Perceptron.h  imageProcessing.cpp  imageProcessing.h  main.cpp
